--- a/PROJECT2/Search/templates/base.html
+++ b/PROJECT2/Search/templates/base.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Elasticsearch Tutorial</title>
+    <title>Search</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container">
-        <nav class="navbar bg-dark border-bottom border-body mb-3" data-bs-theme="dark">
+        <nav class="navbar bg-light border-bottom border-body mb-3" data-bs-theme="light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="{{ url_for('static', filename='elastic-logo.svg') }}" alt="Elastic" width="30" height="24"
-                        class="d-inline-block align-text-top">
-                    Elasticsearch Tutorial
+                    <!-- <img src="{{ url_for('static', filename='elastic-logo.svg') }}" alt="Elastic" width="30" height="24"
+                        class="d-inline-block align-text-top"> -->
+                    Search
                 </a>
             </div>
         </nav>
